# GPT-Workshop

./: .gitignore  .pdm-python  1_dataPrep.ipynb  Readme.md  install.ipynb  pyproject.toml  setup.sh
Part1/: 1_dataPrep.ipynb  2_biramLanguageModel.ipynb  3_Attention.ipynb  3_GPTModel.ipynb
Part1/_solutions/: 2_biramLanguageModel.ipynb  3_Attention.ipynb
