[project]
name = "nanoGPT-lecture-manual"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Alfred Feldmeyer", email = "alfred.feldmeyer@squer.io"},
]
dependencies = ["ipykernel>=6.29.5", "pip>=25.1.1", "torch>=2.7.0", "tiktoken>=0.9.0", "numpy==1.26", "langfuse>=2.60.5", "deepeval>=2.9.4", "Flask>=3.1.1", "transformers>=4.52.0", "datasets>=3.6.0", "requests>=2.32.3", "openai>=1.79.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
